eddited merge script

--- a/scripts/merge-transcriptions.ipynb
+++ b/scripts/merge-transcriptions.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "54e45e25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pywikibot\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c8a2ad2f",
    "metadata": {},
@@ -23,10 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e761f8bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0xf2 in position 613: invalid continuation byte",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39mfor\u001b[39;00m entry \u001b[39min\u001b[39;00m dirs:\n\u001b[1;32m     22\u001b[0m     dir_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(root, entry)\n\u001b[0;32m---> 23\u001b[0m     joining_texts(dir_path)     \n",
+      "Cell \u001b[0;32mIn[9], line 11\u001b[0m, in \u001b[0;36mjoining_texts\u001b[0;34m(directory_path)\u001b[0m\n\u001b[1;32m      9\u001b[0m input_file_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(directory_path, entry\u001b[39m.\u001b[39mname)\n\u001b[1;32m     10\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(input_file_path, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m input_file:\n\u001b[0;32m---> 11\u001b[0m     file_contents \u001b[39m=\u001b[39m input_file\u001b[39m.\u001b[39mread()\n\u001b[1;32m     12\u001b[0m \u001b[39m#uz jen udelat, aby se nazev vystupniho souboru bral regexem ze vstupniho a aby seznam souboru sel abecedne\u001b[39;00m\n\u001b[1;32m     13\u001b[0m output_file_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mgetcwd(), nazev)\n",
+      "File \u001b[0;32m<frozen codecs>:322\u001b[0m, in \u001b[0;36mdecode\u001b[0;34m(self, input, final)\u001b[0m\n",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xf2 in position 613: invalid continuation byte"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -35,8 +60,8 @@
     "def joining_texts(directory_path):\n",
     "    with os.scandir(directory_path) as entries:\n",
     "        for entry in entries:\n",
-    "            if entry.is_file():\n",
-    "                input_file_path = os.path.join(os.getcwd(), entry.name)\n",
+    "            if entry.is_file() and \".txt\" in str(entry):\n",
+    "                input_file_path = os.path.join(directory_path, entry.name)\n",
     "                with open(input_file_path, 'r') as input_file:\n",
     "                    file_contents = input_file.read()\n",
     "                #uz jen udelat, aby se nazev vystupniho souboru bral regexem ze vstupniho a aby seznam souboru sel abecedne\n",
