script for merging files

--- a/scripts/extract-noscemus-full.ipynb
+++ b/scripts/extract-noscemus-full.ipynb
@@ -160,12 +160,13 @@
     "            n = 1\n",
     "            for filename in filenames:\n",
     "                filenames_ids_dict[filename] = id\n",
-    "                text = s.read_file(\"NOSCEMUS_FULL/\" + id + \"/\" + textfile, \"str\")\n",
+    "                text = s.read_file(\"NOSCEMUS_FULL/\" + id + \"/\" + filename, \"str\")\n",
     "                s.write_file(\"noscemus_raw/{0}_{1}.txt\".format(str(id), str(n)), text)\n",
     "                n += 1\n",
     "        else:\n",
+    "            filename = filenames[0] \n",
     "            filenames_ids_dict[filename] = id\n",
-    "            text = s.read_file(\"NOSCEMUS_FULL/\" + id + \"/\" + textfile, \"str\")\n",
+    "            text = s.read_file(\"NOSCEMUS_FULL/\" + id + \"/\" + filename, \"str\")\n",
     "            s.write_file(\"noscemus_raw/{0}.txt\".format(str(id)), text)\n",
     "    except:\n",
     "        missing_ids.append(id)"
