eddited metadata scrape

--- a/scripts/metadata-scraping.ipynb
+++ b/scripts/metadata-scraping.ipynb
@@ -13,117 +13,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<tr>\n",
-      "<th> Author\n",
-      "</th>\n",
-      "<td> <a href=\"/noscemus/Pardies,_Ignace_Gaston\" title=\"Pardies, Ignace Gaston\">Pardies, Ignace Gaston</a>\n",
-      "</td></tr>, <tr>\n",
-      "<th> Full title\n",
-      "</th>\n",
-      "<td> A Latin Letter written to the Publisher April 9. 1672. n. st. by Ignatius Gaston Pardies P. Prof. of the Mathematicks in the Parisian Colledge of Clermont, containing some Animadversions upon Mr. Isaac Newton, Prof. of the Mathematicks in the University of Cambridge, his Theory of Light, printed in N.° 80.\n",
-      "</td></tr>, <tr>\n",
-      "<th> In\n",
-      "</th>\n",
-      "<td> Philosophical Transactions of the Royal Society 7/84, 4087–90\n",
-      "</td></tr>, <tr>\n",
-      "<th> Year\n",
-      "</th>\n",
-      "<td> 1672\n",
-      "</td></tr>, <tr>\n",
-      "<th> Place\n",
-      "</th>\n",
-      "<td> London\n",
-      "</td></tr>, <tr>\n",
-      "<th> Publisher/Printer\n",
-      "</th>\n",
-      "<td> Martyn\n",
-      "</td></tr>, <tr>\n",
-      "<th> Era\n",
-      "</th>\n",
-      "<td> 17th century\n",
-      "</td></tr>, <tr>\n",
-      "<th> Form/Genre\n",
-      "</th>\n",
-      "<td> Letter, Review\n",
-      "</td></tr>, <tr>\n",
-      "<th> Discipline/Content\n",
-      "</th>\n",
-      "<td> Physics\n",
-      "</td></tr>, <tr>\n",
-      "<th colspan=\"2\" style=\"text-align:left\">Digital copies\n",
-      "</th></tr>, <tr>\n",
-      "<td>Original\n",
-      "</td>\n",
-      "<td> <a class=\"external text\" href=\"https://www.jstor.org/stable/100940\" rel=\"nofollow\">A Latin Letter</a> (JSTOR)\n",
-      "</td></tr>, <tr>\n",
-      "<td>Digital sourcebook\n",
-      "</td>\n",
-      "<td> <a class=\"external text\" href=\"https://transkribus.eu/r/noscemus/#/documents/607720\" rel=\"nofollow\">607720</a>\n",
-      "</td></tr>, <tr>\n",
-      "<th> Description\n",
-      "</th>\n",
-      "<td> In Feburary of 1672, <a href=\"/noscemus/Newton,_Isaac\" title=\"Newton, Isaac\">Isaac Newton</a> published his groundbreaking new theory about light and colours, in an <a class=\"external text\" href=\"https://www.jstor.org/stable/101125\" rel=\"nofollow\">English paper</a> in the 80th issue of the <i>Philosophical Transactions</i> (p. 3075–87). In this scientific paper styled as a letter, Newton accounts how through his experiments with glass prisms, he came to the conclusion that white light consisted of spectral colours each of which was differently refrangible. However, Newton's theory was soon opposed, most notably by Robert Hooke and <a href=\"/noscemus/Huygens,_Christiaan\" title=\"Huygens, Christiaan\">Christiaan Huygens</a>, but also by the Parisian Jesuit and professor of mathematics Ignace Pardies, who wrote two letters on Newton's theory of light. This is the second of Pardies' letters, a short Latin text addressed to the editor of the <i>Philosophical Transactions</i> Henry Oldenburg. As on of the first reactions to Newton's theory of light and colours, it was written in April in the same year of 1672 and published in the 84th issue of the journal together with <a href=\"/noscemus/Mr._Newtons_Letter,_being_an_Answer_to_the_Letter_of_P._Pardies\" title=\"Mr. Newtons Letter, being an Answer to the Letter of P. Pardies\">Newton's response</a>, which was written in Latin as well.\n",
-      "<p>Although in reality this was a scientific discussion between Pardies and Newton, both their letters are fashioned as conversations with the editor Henry Oldenburg about Newton's theory of light and colour. Thus, Pardies' letter starts: <i>Legi ingeniosissimam hypothesin de lumine et coloribus clarissimi Newtoni. Et quia nonnullam ego operam dedi in ista contemplatione ac experimentis peragendis, perscribam ad te pauca, quae mihi circa novam istam doctrinam occurrerunt</i>. (\"I read the most ingenious hypothesis about light and colour by the most famous Newton. And since I myself made some efforts in thinking it through and conducting the experiments, I will write to you a few things that came to my mind about this new doctrine.\") Although disagreeing with Newton's theory, Pardies is very polite in his letter, calling Newton's theory <i>ingeniosissima</i> and Newton himself both <i>clarissimus</i> and <i>eruditissimus</i>. As it is printed, the letter lacks a <i>salutatio</i> or <i>conclusio</i> to the addressee Oldenbourg, but gets straight to the point of Newton's theory of colours, which is first briefly introduced and then discussed in detail. \n",
-      "</p><p>Pardies first provides a Latin summary of Newton's theory of light and colours and procedes to raise his points of criticism: Newton's hypothesis of light, while relying wholly on one prism experiment, would radically change the whole fundaments of optics and renders the traditional practice useless (<i>dioptricae fundamenta evertit, praxesque hactenus institutas inutiles reddit</i>, p. 4087). Instead, Pardies argues that Newton's observation that light passing through a glass prism acquired an oblong instead of a circular shape can still be explained according to the established rules of optics (<i>iuxta communes et receptas dioptricae leges</i>, p. 4087) and does not require the different refrangibility of rays within white light. In the main part of the letter, Pardies tries to prove his claim by means of a geometric-mathematical argumentation, which is supported by a diagram. On the last page, Pardies turns to the idea of different colours coexisting within white light, an idea that was hard to imagine and seemed to contradict experience: while this idea follows perfectly from Newton's hypothesis, Pardies says, colours are not able to blend into something white, but only into something dark, as can be observed in painting colours.\n",
-      "</p><p>The letter by Pardies is evidence that Newton's paper on the theory of light and colours, though printed in English, led to an international scientific discussion that was at least partially conducted and printed in Latin. Although the principal language of publication and scientific discourse in the <i>Philosophical Transactions</i> was English, not only was Pardies' letter printed in the journal in its original Latin, but, crucially, Newton felt compelled to respond in Latin, too.\n",
-      "</p>\n",
-      "</td></tr>, <tr>\n",
-      "<th> References\n",
-      "</th>\n",
-      "<td> <a href=\"/noscemus/Harmon;_Gross_2007\" title=\"Harmon; Gross 2007\">Harmon; Gross 2007</a>, 22–5\n",
-      "</td></tr>, <tr>\n",
-      "<th> Cited in\n",
-      "</th>\n",
-      "<td><ul id=\"mw-whatlinkshere-list\"><li><a href=\"/noscemus/Pardies,_Ignace_Gaston\" title=\"Pardies, Ignace Gaston\">Pardies, Ignace Gaston</a>  ‎ <span class=\"mw-whatlinkshere-tools\">(<a href=\"/noscemus/_-_/index.php?title=Special:WhatLinksHere&amp;target=Pardies%2C+Ignace+Gaston\" title=\"Special:WhatLinksHere\">← links</a>)</span></li>\n",
-      "<li><a href=\"/noscemus/Mr._Newtons_Letter,_being_an_Answer_to_the_Letter_of_P._Pardies\" title=\"Mr. Newtons Letter, being an Answer to the Letter of P. Pardies\">Mr. Newtons Letter, being an Answer to the Letter of P. Pardies</a>  ‎ <span class=\"mw-whatlinkshere-tools\">(<a href=\"/noscemus/_-_/index.php?title=Special:WhatLinksHere&amp;target=Mr.+Newtons+Letter%2C+being+an+Answer+to+the+Letter+of+P.+Pardies\" title=\"Special:WhatLinksHere\">← links</a>)</span></li>\n",
-      "</ul>\n",
-      "</td></tr>, <tr>\n",
-      "<th> How to cite this entry\n",
-      "</th>\n",
-      "<td> Pardies, Ignace Gaston: <i>A Latin Letter containing some Animadversions upon Mr. Isaac Newton, his Theory of Light</i>, in: Noscemus Wiki, URL: <a class=\"external free\" href=\"http://wiki.uibk.ac.at/noscemus/A_Latin_Letter_containing_some_Animadversions_upon_Mr._Isaac_Newton,_his_Theory_of_Light\" rel=\"nofollow\">http://wiki.uibk.ac.at/noscemus/A_Latin_Letter_containing_some_Animadversions_upon_Mr._Isaac_Newton,_his_Theory_of_Light</a> (last revision: 03.01.2023).\n",
-      "</td></tr>, <tr class=\"onlyforeditors\">\n",
-      "<th colspan=\"2\" style=\"text-align:left\">Internal notes\n",
-      "</th></tr>, <tr class=\"onlyforeditors\">\n",
-      "<td>Internal notes\n",
-      "</td>\n",
-      "<td> RECENSIO\n",
-      "</td></tr>, <tr class=\"onlyforeditors\">\n",
-      "<td>Of interest to\n",
-      "</td>\n",
-      "<td>\n",
-      "</td></tr>, <tr class=\"onlyforeditors\">\n",
-      "<td>Transkribus text available\n",
-      "</td>\n",
-      "<td> Yes\n",
-      "</td></tr>, <tr class=\"onlyforeditors\">\n",
-      "<td>Written by\n",
-      "</td>\n",
-      "<td> IT\n",
-      "</td></tr>]\n"
+      "['Author', 'Full title', 'In', 'Year', 'Place', 'Publisher/Printer', 'Era', 'Form/Genre', 'Discipline/Content', 'Digital copies', 'Description', 'References', 'Cited in', 'How to cite this entry', 'Internal notes']\n"
      ]
     }
    ],
    "source": [
+    "#Test webu, vytvoreni tabulky a ziskani nadpisu\n",
     "url = \"https://wiki.uibk.ac.at/noscemus/A_Latin_Letter_containing_some_Animadversions_upon_Mr._Isaac_Newton,_his_Theory_of_Light\"\n",
     "response = requests.get(url)\n",
     "\n",
     "if response.status_code == 200:\n",
     "    soup = BeautifulSoup(response.content, \"html.parser\")\n",
-    "    tabulka = soup.find(\"table\", class_=\"wikitable\")\n",
-    "    data = tabulka.find_all(\"tr\")\n",
-    "    print(data)\n",
-    "    panda_tabulka = pd.DataFrame()\n",
-    "\n",
-    "    panda_tabulka = pd.DataFrame([data.find_all(\"td\")], columns=[data.find_all(\"th\")])\n",
+    "    table = soup.find(\"table\", class_=\"wikitable\")\n",
+    "    rows = table.find_all(\"tr\")\n",
+    "    columns = [item.text.strip() for item in table.find_all(\"th\")]\n",
+    "    metadata_tabulka = pd.DataFrame(columns=columns)\n",
     "else:\n",
-    "    print(\"Smula, response code je:\", response.status_code)\n"
+    "    print(\"Chyba, response code je:\", response.status_code)\n"
    ]
   },
   {
@@ -132,15 +45,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = []\n",
-    "table = soup.find('table', attrs={'class':'lineItemsTable'})\n",
-    "table_body = table.find('tbody')\n",
+    "# zatim nefunguje - work in progress !!!\n",
+    "url = \"https://wiki.uibk.ac.at/noscemus/Category:Works\"\n",
+    "response = requests.get(url)\n",
+    "soup = BeautifulSoup(response.content, \"html.parser\")\n",
     "\n",
-    "rows = table_body.find_all('tr')\n",
-    "for row in rows:\n",
-    "    cols = row.find_all('td')\n",
-    "    cols = [ele.text.strip() for ele in cols]\n",
-    "    data.append([ele for ele in cols if ele]) # Get rid of empty values"
+    "print(soup)\n",
+    "\n",
+    "'''\n",
+    "table = soup.find(\"table\", class_=\"wikitable\")\n",
+    "rows = table.find_all(\"tr\")\n",
+    "columns = [item.text.strip() for item in table.find_all(\"th\")]\n",
+    "metadata_tabulka = pd.DataFrame(columns=columns)\n",
+    "'''"
    ]
   }
  ],
