--- a/scripts/metadata-scraping.ipynb
+++ b/scripts/metadata-scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Author', 'Full title', 'In', 'Year', 'Place', 'Publisher/Printer', 'Era', 'Form/Genre', 'Discipline/Content', 'Digital copies', 'Description', 'References', 'Cited in', 'How to cite this entry', 'Internal notes']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Test webu, vytvoreni tabulky a ziskani nadpisu\n",
     "url = \"https://wiki.uibk.ac.at/noscemus/A_Latin_Letter_containing_some_Animadversions_upon_Mr._Isaac_Newton,_his_Theory_of_Light\"\n",
@@ -32,11 +24,11 @@
     "if response.status_code == 200:\n",
     "    soup = BeautifulSoup(response.content, \"html.parser\")\n",
     "    table = soup.find(\"table\", class_=\"wikitable\")\n",
-    "    rows = table.find_all(\"tr\")\n",
+    "    row_data = [item.get_text() for item in table.find_all(\"td\")]\n",
     "    columns = [item.text.strip() for item in table.find_all(\"th\")]\n",
-    "    metadata_tabulka = pd.DataFrame(columns=columns)\n",
+    "    #metadata_tabulka = pd.DataFrame(data=row_data, index=columns)\n",
     "else:\n",
-    "    print(\"Chyba, response code je:\", response.status_code)\n"
+    "    print(\"Chyba, response code je:\", response.status_code)"
    ]
   },
   {
@@ -45,12 +37,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "row_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Full title</th>\n",
+       "      <th>In</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Place</th>\n",
+       "      <th>Publisher/Printer</th>\n",
+       "      <th>Era</th>\n",
+       "      <th>Form/Genre</th>\n",
+       "      <th>Discipline/Content</th>\n",
+       "      <th>Digital copies</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>References</th>\n",
+       "      <th>Cited in</th>\n",
+       "      <th>How to cite this entry</th>\n",
+       "      <th>Internal notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Author, Full title, In, Year, Place, Publisher/Printer, Era, Form/Genre, Discipline/Content, Digital copies, Description, References, Cited in, How to cite this entry, Internal notes]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadata_tabulka"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3601109673.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    names = soup.find(\"div\", class=\"mw-category-generated\")\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
     "# zatim nefunguje - work in progress !!!\n",
     "url = \"https://wiki.uibk.ac.at/noscemus/Category:Works\"\n",
     "response = requests.get(url)\n",
     "soup = BeautifulSoup(response.content, \"html.parser\")\n",
     "\n",
-    "print(soup)\n",
+    "names = soup.find(\"div\", class=\"mw-category-generated\")\n",
+    "\n",
+    "\n",
+    "print(names)\n",
     "\n",
     "'''\n",
     "table = soup.find(\"table\", class_=\"wikitable\")\n",
